# build-word-embedding-models-ja

./: .gitignore  Dockerfile  Pipfile  README.md  clean_format.py  config.yaml  pyproject.toml  requirements.txt  run.sh
.github/workflows/: action.yml
src/: WikiExtractor.py  clean_format.py  config.yaml  get_corpus.py  train_word2vec.py
